objects/DocumentCharacteristic__c.object
<CustomObject>
    <fields>
        <fullName>Characteristic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The characteristic of this document.</description>
        <inlineHelpText>The characteristic of this document.</inlineHelpText>
        <label>Characteristic</label>
        <referenceTo>Characteristic__c</referenceTo>
        <relationshipLabel>Document Characteristics</relationshipLabel>
        <relationshipName>DocumentCharacteristics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocumentCharacteristicEID__c</fullName>
        <description>The Enterprise ID for this Document Characteristic.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this Document Characteristic.</inlineHelpText>
        <label>Document Characteristic EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DocumentOption__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Option</label>
        <referenceTo>DocumentOption__c</referenceTo>
        <relationshipLabel>Document Characteristics</relationshipLabel>
        <relationshipName>DocumentCharacteristics</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Document Characteristic</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Document Characteristic Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Characteristics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>